// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transcriber transcriber.no-empty-statement 1`] = `
"export class Foo {
  static foo: number;

  Test(a: number, b: string) {
    a += Foo.foo;
    return a.toString() + b;
  }

}"
`;

exports[`transcriber transcriber.transcribe 1`] = `
"export class Foo {
  static foo: number;

  constructor() {
    console.log(\\"hi\\");
  }

  Test(a: number, b: string) {
    return a.toString() + b;
  }

  Test2(a: number, b: string) {
    return a.toString() + b;
  }

}"
`;
